# mochi

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  biome.json  commitlint.config.mjs  package.json  rust-toolchain.toml  tsconfig.base.json  tsconfig.json
.changeset/: 0257-dx-cluster.md  0258-linux-server-auto-detect.md  0260-import-harvester-profiles.md  0265-page-screenshot.md  0266-fetch-fulfill-init-script.md  0267-audio-canvas-fingerprint-blobs.md  0272-host-os-profile-auto-default.md  0290-drop-wreq.md  apparmor-userns-auto-fallback.md  auto-no-sandbox-as-root.md  behavioral-engine-v0.md  cdp-pipe-transport-0011.md  cft-pin-147-117-actually-in-catalog.md  cft-pin-rollback-147.md  chrome-148-profile-loading.md  chromium-flags-audit-hermetic.md  cli-browsers-install.md  cli-capture.md  cli-install-defaults-to-pin.md  closed-shadow-piercing-locator.md  config.json  connect-and-no-spoof.md  consistency-rules-full.md  cross-platform-prebuilds.md  early-exit-diagnostic.md  geo-consistency-exit-ip.md  harness-mvp.md  headless-ua-no-leak.md  humanize-conformance.md  initial-foundation.md  inject-engine-v0.md  lang-flag-from-matrix.md  linux-runtime-deps-smoke.md  mouseevent-screen-coords.md  perf-timing-illegal-invocation-fix.md  performance-navigation-timing-shim.md  placeholder-os-inference.md  proxy-auth-and-ci-fix-0160.md  stealth-conformance.md  turnstile-auto-click.md  (+4 more)
docs/: README.md  limits.md  quickstart.md
examples/: README.md
schemas/: diff-report.schema.json  matrix.schema.json  probe-manifest.schema.json  (+1 more)
(+272 files in other folders)
